修复CSS空规则集警告
- 删除第118-121行的4个空CSS规则集
- 添加注释说明类名仅用于语义标记
- 解决css(emptyRules) lint警告

--- a/19-indicator/index.html
+++ b/19-indicator/index.html
@@ -114,11 +114,8 @@
         .trend-down { color: #FF4D4F; }
         .indicator-card .trend-flat { color: #8C8C8C; }
 
-        /* 普通指标卡：白色背景+深色文字（保持紧凑尺寸） */
-        .indicator-card.blue { }
-        .indicator-card.green { }
-        .indicator-card.yellow { }
-        .indicator-card.red { }
+        /* 普通指标卡：白色背景+深色文字（参考大小） */
+        /* .blue, .green, .yellow, .red 类名仅用于语义标记，样式由默认样式统一处理 */
 
         .variant-section { margin-top: 32px; }
         .variant-row {
