修复包含子指标的卡片内容溢出问题
- 将固定 height: 130px 改为 height: auto，允许卡片根据内容自动扩展
- 保持 min-height: 130px 确保基础卡片有最小高度
- 为包含子指标/操作按钮/空状态建议的卡片移除最小高度限制
- 添加 flex-shrink: 0 到 .kpi-sub 防止子指标区域被压缩
- 修复GMV场景等包含4个子指标的卡片显示不完整问题

--- a/kpi-showcase.html
+++ b/kpi-showcase.html
@@ -132,18 +132,11 @@
             border: 1px solid #F0F0F0;
             box-shadow: 0 1px 2px rgba(0,0,0,0.05);
             font-family: inherit;
-            min-height: 130px;
-            height: 130px;
+            min-height: 120px;
+            height: auto;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-        }
-        @media (max-width: 768px) {
-            .kpi-card {
-                padding: 16px;
-                min-height: 120px;
-                height: 120px;
-            }
         }
         .kpi-card .kpi-label { font-size: 13px; color: #8C8C8C; margin-bottom: 10px; font-weight: 400; }
         .kpi-card .kpi-value {
@@ -170,6 +163,7 @@
             border-top: 1px solid #F0F0F0;
             display: grid;
             gap: 12px;
+            flex-shrink: 0;
         }
         .kpi-card .kpi-sub.grid2 { grid-template-columns: repeat(2, 1fr); }
         .kpi-card .kpi-sub.grid4 { grid-template-columns: repeat(4, 1fr); }
