--- a/kpi-showcase.html
+++ b/kpi-showcase.html
@@ -132,11 +132,17 @@
             border: 1px solid #F0F0F0;
             box-shadow: 0 1px 2px rgba(0,0,0,0.05);
             font-family: inherit;
-            min-height: 120px;
+            min-height: 130px;
             height: auto;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: flex-start;
+        }
+        /* 包含子指标/操作按钮/空状态建议的卡片允许自动扩展 */
+        .kpi-card:has(.kpi-sub),
+        .kpi-card:has(.kpi-action),
+        .kpi-card:has(.empty-suggest) {
+            min-height: auto;
         }
         .kpi-card .kpi-label { font-size: 13px; color: #8C8C8C; margin-bottom: 10px; font-weight: 400; }
         .kpi-card .kpi-value {
